@@ -215,6 +215,11 @@ public abstract class LegacyLayout
             // pop the collection name from the back of the list of clusterings
             ByteBuffer collectionNameBytes = components.remove(clusteringSize);
             collectionName = metadata.getColumnDefinition(collectionNameBytes);
+            if (collectionName == null) {
+                collectionName = metadata.getDroppedColumnDefinition(collectionNameBytes);
+                if (collectionName == null)
+                    throw new RuntimeException("Unknown collection column " + UTF8Type.instance.getString(collectionNameBytes) + " during deserialization");
+            }
         }
 
         boolean isInclusive;
